# SPF-Stock-Pulse

./: .gitignore  README.md  main.py  prediction.py  pyproject.toml  replit.nix  strategy_simulator.py  utils.py
.streamlit/: config.toml
