[project]
name = "repl-nix-stockpulse"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "nltk>=3.9.1",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "reportlab>=4.2.5",
    "scikit-learn>=1.6.0",
    "streamlit>=1.41.1",
    "textblob>=0.18.0.post0",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.51",
]
